--- a/TuneSearch/app/build.gradle
+++ b/TuneSearch/app/build.gradle
@@ -30,10 +30,10 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha09'
-    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha09'
-    implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha09'
-    implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha09'
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-rc01'
+    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-rc01'
+    implementation 'android.arch.navigation:navigation-ui:1.0.0-rc01'
+    implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0-rc01'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.android.gms:play-services-oss-licenses:16.0.1'
+    implementation 'com.github.RobinNunkesser:basiccleanarch-gradle:0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
