--- a/TuneSearch/app/build.gradle
+++ b/TuneSearch/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-oss-licenses:16.0.1'
     implementation 'com.github.RobinNunkesser:basiccleanarch-gradle:0.2'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.19.0'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
