--- a/TuneSearchCompose/build.gradle
+++ b/TuneSearchCompose/build.gradle
@@ -1,15 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext.kotlin_version = "1.3.72"
+
+    def compose_release_version = "dev09"
+    ext.compose_version = "0.1.0-$compose_release_version"
+    ext.compose_compiler_extension_version = "0.1.0-$compose_release_version"
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath "com.android.tools.build:gradle:4.1.0-alpha09"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.android.gms:oss-licenses-plugin:0.9.4'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
