--- a/TuneSearchCompose/app/build.gradle
+++ b/TuneSearchCompose/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'com.google.android.gms.oss-licenses-plugin'
 }
 
 android {
@@ -52,6 +53,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
     implementation 'com.github.RobinNunkesser:basiccleanarch-gradle:1.1'
+    implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
     testImplementation 'junit:junit:4.13'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0'
     testImplementation 'org.mockito:mockito-core:2.23.0'
