--- a/TuneSearchCompose/app/build.gradle
+++ b/TuneSearchCompose/app/build.gradle
@@ -35,6 +35,7 @@ android {
         compose true
     }
     composeOptions {
+        kotlinCompilerVersion "1.3.70-dev-withExperimentalGoogleExtensions-20200424"
         kotlinCompilerExtensionVersion "$compose_compiler_extension_version"
     }
 }
@@ -45,12 +46,14 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
-    implementation("androidx.ui:ui-framework:$compose_version")
+    implementation("androidx.ui:ui-core:$compose_version")
+    implementation("androidx.ui:ui-foundation:$compose_version")
     implementation("androidx.ui:ui-layout:$compose_version")
     implementation("androidx.ui:ui-material:$compose_version")
     implementation "androidx.ui:ui-tooling:$compose_version"
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
     implementation 'com.github.RobinNunkesser:basiccleanarch-gradle:1.1'
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
