--- a/TuneSearchCompose/gradle/wrapper/gradle-wrapper.properties
+++ b/TuneSearchCompose/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri May 22 11:32:21 CEST 2020
+#Thu Sep 03 09:43:26 CEST 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.4-rc-2-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
