--- a/TuneSearchCompose/build.gradle
+++ b/TuneSearchCompose/build.gradle
@@ -1,17 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
-
-    def compose_release_version = "dev11"
-    ext.compose_version = "0.1.0-$compose_release_version"
-    ext.compose_compiler_extension_version = "0.1.0-$compose_release_version"
+    ext.compose_version = '1.0.0-SNAPSHOT'
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.0-alpha07'
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha01'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.android.gms:oss-licenses-plugin:0.10.2'
 
@@ -22,6 +19,10 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            def snapshot = "6961312"
+            url  "https://androidx.dev/snapshots/builds/$snapshot/artifacts/repository/"
+        }
         google()
         jcenter()
         maven { url "https://jitpack.io" }
