--- a/TuneSearch/core/build.gradle
+++ b/TuneSearch/core/build.gradle
@@ -4,8 +4,18 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.freeCompilerArgs += ["-Xallow-result-return-type"]
+}
+
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.freeCompilerArgs += ["-Xallow-result-return-type"]
 }
 
 dependencies {
@@ -13,7 +23,9 @@ dependencies {
     implementation 'de.hshl.isd:explicitarchitecture:0.0.1'
     implementation 'de.hshl.isd:explicitarchitecture-tunesearch-core-ports:0.0.3'
     implementation 'de.hshl.isd:explicitarchitecture-tunesearch-mockcore:0.0.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
+    testImplementation(project(":infrastructure"))
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0'
     testImplementation 'junit:junit:4.+'
 }
